--- a/Edurem/Views/Post/Index.cshtml
+++ b/Edurem/Views/Post/Index.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row justify-content-center">
     <div class="col-9">
-        <div class="row mt-4">
+        <div class="row mt-4" style="display: block">
             @Html.Raw(Model.Body)
         </div>
         <div class="row mt-4">
